<resources>
    <string name="app_name">ConalApp</string>

    <!-- <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyARQO1lorK1UyiWJk438q1U7jCzZkXIj7c
    </string> -->

    <!-- Pantalla login -->
    <string name="btn_Ingresar">Ingresar</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="hint_contrasenia">Contraseña</string>
    <string name="tv_crear_cuenta">Crear cuenta</string>

    <!-- Pantalla principal -->
    <string name="nombre_pantalla_principal">ConalApp</string>
    <string name="nv_boletin">Boletínes</string>
    <string name="nv_reunion">Reuniónes</string>
    <string name="Open">NavBarOpen</string>
    <string name="Close">NavBarClose</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="puntos_interes">Mis Puntos de Interés</string>
    <string name="contactos_emergencia">Contactos de Emergecia</string>
    <string name="configuracion">Configuración</string>
    <string name="estadisticas">Estadisticas</string>
    <string name="sobre_nosotros">Sobre Nosotros</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>

    <!-- Pantalla registrar usuario -->
    <string name="nombre_pantalla_registrar_usuario">Registrarse</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_apellido">Apellido</string>
    <string name="hint_rep_contraseña">Repetir contraseña</string>
    <string name="hint_anio_nacimiento">Fecha de nacimiento</string>
    <string name="hint_lugar_residencia">Lugar de Residencia</string>
    <string name="hint_biografia">Biografía</string>
    <string name="hint_genero">Género</string>
    <string name="hint_gen_hombre">Hombre</string>
    <string name="hint_gen_mujer">Mujer</string>
    <string name="hint_sobrenombre">Sobrenombre</string>
    <string name="hint_fechanacimiento">Fecha nacimiento (Año-mes-día)</string>
    <string name="hint_lugar_origen">Origen (Provincia-Cantón)</string>

    <!-- Pantalla configuracion -->
    <string name="notificaciones">¿Recibir notificaciones emergentes?</string>
    <string name="cerrar_cuenta">Cerrar cuenta</string>
    <string name="nombre_pantalla_configuracion">Configuración</string>

    <!-- Pantalla puntos de interés -->
    <string-array name="array_provincias_costa_rica">
        <item>San José</item>
        <item>Alajuela</item>
        <item>Cartago</item>
        <item>Heredia</item>
        <item>Guanacaste</item>
        <item>Puntarenas</item>
        <item>Limón</item>
    </string-array>

    <string-array name="array_cantones_san_jose">
        <item>Acosta</item>
        <item>Alajuelita</item>
        <item>Aserrí</item>
        <item>Curridabat</item>
        <item>Desamparados</item>
        <item>Dota</item>
        <item>Escazú</item>
        <item>Goicoechea</item>
        <item>León Cortés</item>
        <item>Montes de Oca</item>
        <item>Mora</item>
        <item>Moravia</item>
        <item>Pérez Zeledón</item>
        <item>Puriscal</item>
        <item>San José</item>
        <item>Santa Ana</item>
        <item>Tarrazú</item>
        <item>Tibás</item>
        <item>Turrubares</item>
        <item>Vázquez de Coronado</item>
    </string-array>

    <string-array name="array_cantones_alajuela">Alajuela
        <item>Alajuela</item>
        <item>Atenas</item>
        <item>Grecia</item>
        <item>Guatuso</item>
        <item>Los Chiles</item>
        <item>Naranjo</item>
        <item>Orotina</item>
        <item>Palmares</item>
        <item>Poás</item>
        <item>Río Cuarto</item>
        <item>San Carlos</item>
        <item>San Mateo</item>
        <item>San Ramón</item>
        <item>Upala</item>
        <item>Valverde Vega</item>
        <item>Zarcero</item>
    </string-array>

    <string-array name="array_cantones_cartago">Cartago
        <item>Alvarado</item>
        <item>Cartago</item>
        <item>El Guarco</item>
        <item>Jiménez</item>
        <item>La Unión</item>
        <item>Oreamuno</item>
        <item>Paraíso</item>
        <item>Turrialba</item>
    </string-array>

    <string-array name="array_cantones_guanacaste">Guanacaste
        <item>Abangares</item>
        <item>Bagaces</item>
        <item>Cañas</item>
        <item>Carrillo</item>
        <item>Hojancha</item>
        <item>La Cruz</item>
        <item>Liberia</item>
        <item>Nandayure</item>
        <item>Nicoya</item>
        <item>Santa Cruz</item>
        <item>Tilarán</item>
    </string-array>

    <string-array name="array_cantones_heredia">Heredia
        <item>Barva</item>
        <item>Belén</item>
        <item>Flores</item>
        <item>Heredia</item>
        <item>San Isidro</item>
        <item>San Pablo</item>
        <item>San Rafael</item>
        <item>Santa Bárbara</item>
        <item>Santo Domingo</item>
        <item>Sarapiqui</item>
    </string-array>

    <string-array name="array_cantones_limon">Limón
        <item>Guácimo</item>
        <item>Limón</item>
        <item>Matina</item>
        <item>Pococí</item>
        <item>Siquirres</item>
        <item>Talamanca</item>
    </string-array>

    <string-array name="arrar_cantones_puntarenas">Puntarenas
        <item>Aguirre</item>
        <item>Buenos Aires</item>
        <item>Corredores</item>
        <item>Coto Brus</item>
        <item>Esparza</item>
        <item>Garabito</item>
        <item>Golfito</item>
        <item>Montes de Oro</item>
        <item>Osa</item>
        <item>Parrita</item>
        <item>Puntarenas</item>
    </string-array>

    <string name="nombre_pantalla_puntos_interes">Puntos de Interés</string>
    <string name="bnt_agregar_punto_interes">Agregar Ubicación</string>

    <!-- Pantalla contactos -->
    <string name="nombre_pantalla_contactos">Centros de Atención</string>

    <!-- Pantalla perfil usuario -->
    <string name="nombre_pantalla_perfil_usuario">Mi Perfil</string>

    <!-- Pantalla sobre nosotros -->
    <string name="nombre_pantalla_sobre_nosotros">Sobre Nosotros</string>
    <string name="info_sobre_nosotros">
        JGJ Solutions es una organización informal sin fines de lucro conformada por 3 jóvenes estudiantes,
        que tiene como principal objetivo crear y brindar herramientas tecnológicas que sean de provecho
        para la cuidadania costarricense.
    </string>

    <!-- Pantalla crear boletin y reunion -->
    <string name="nombre_pantalla_crear_boletin">Crear Boletín</string>
    <string name="hint_titular">Titular</string>
    <string name="hint_fecha">Fecha (Año-mes-día)</string>
    <string name="hint_hora">Hora</string>
    <string name="hint_descripcion">Descripción</string>
    <string name="hint_encargados">Ubicación</string>
    <string name="btn_crear_boletin">PUBLICAR BOLETÍN</string>
    <string name="tv_acordas_sospechosos">¿Te acordás de los sospechosos?</string>
    <string name="input_hint_describelos">Estatura, cabello, contextura, piel, ...</string>
    <string name="tv_portaban_armas">¿Portaban armas?</string>
    <string name="input_hint_descripcion_armas">Arma blanca, arma de fuego, ...</string>
    <string name="tv_usaron_vehiculos">¿Utilizaron vehículos?</string>
    <string name="input_hint_descripcion_vehiculo">Cuantos?, tipo, color, placas, ... </string>
    <string name="tv_acordas_ubicacion">¿Te acordás del lugar?</string>
    <string name="tv_ubicar_lugar">¿Desea ubicar el lugar?</string>
    <string name="tv_ubica_aprox_ubicacion">Ubicá aproximadamente el lugar!</string>
    <string name="tv_sospechosos_info">Sospechosos: </string>
    <string name="tv_armas_sosp">Armas usadas: </string>
    <string name="tv_vehiculos_sosp">Vehículos usados: </string>

    <string name="nombre_pantalla_crear_reunion">Crear Reunión</string>
    <string name="btn_crear_reunion">PUBLICAR REUNIÓN</string>
    <string name="_text_view">Provincia/Cantón</string>
    <string name="__text_view">Comunidad (opcional)</string>

    <!-- Pantalla crear boletin y reunion -->
    <string name="nombre_pantalla_editar_info">Editar Perfil</string>

    <!-- Pantalla comunidades -->
    <string name="btn_crear_comunidad">CREAR COMUNIDAD</string>
    <string name="comunidades">Comunidades</string>
    <string name="comunidad">Comunidad</string>
    <string name="crear_comunidades">Crear Comunidad</string>
    <string name="buscar_comunidades">Buscar Comunidades</string>


</resources>
